// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> Snapshots renders a Radio with a label and description correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-radio vd-radio--primary vd-radio--large"
  >
    <label
      className="vd-radio-container"
    >
      <div
        className="vd-radio-input-container"
      >
        <input
          checked={false}
          className="vd-radio-input"
          id="Radio"
          onChange={[MockFunction]}
          type="radio"
          value="value"
        />
        <div
          className="vd-radio-tick"
        />
        <div
          className="vd-radio-label"
        >
          Label
        </div>
      </div>
      <div
        className="vd-radio-description"
      >
        Description
      </div>
    </label>
  </div>
</div>
`;

exports[`<Radio /> Snapshots renders a checked Radio correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-radio vd-radio--primary vd-radio--large"
  >
    <label
      className="vd-radio-container"
    >
      <div
        className="vd-radio-input-container"
      >
        <input
          checked={true}
          className="vd-radio-input"
          id="Radio"
          onChange={[MockFunction]}
          type="radio"
          value="value"
        />
        <div
          className="vd-radio-tick"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Radio /> Snapshots renders a disabled Radio correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-radio vd-radio--primary vd-radio--large"
  >
    <label
      className="vd-radio-container"
    >
      <div
        className="vd-radio-input-container"
      >
        <input
          checked={false}
          className="vd-radio-input"
          disabled={true}
          id="Radio"
          onChange={[MockFunction]}
          type="radio"
          value="value"
        />
        <div
          className="vd-radio-tick"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Radio /> Snapshots renders a simple Radio correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-radio vd-radio--primary vd-radio--large"
  >
    <label
      className="vd-radio-container"
    >
      <div
        className="vd-radio-input-container"
      >
        <input
          checked={false}
          className="vd-radio-input"
          onChange={[MockFunction]}
          type="radio"
        />
        <div
          className="vd-radio-tick"
        />
      </div>
    </label>
  </div>
</div>
`;
